# esd-neuro-symbolic

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/: biopsy_thresholds.yaml  evaluation.yaml  features.yaml  model_params.yaml
docs/architecture/: CASE_REPLAY_AND_TRAJECTORY_MODEL.md  CLINICAL_REPORTING_SYSTEM.md  CLINICAL_SAFETY_LAYER.md  DEMONSTRATION_WORKFLOW.md  DIAGNOSTIC_STATE_MODEL.md  FRONTEND_ARCHITECTURE.md  INTERACTION_STATE_MODEL.md  PROGRESSIVE_REASONING_STAGES.md  REASONING_GRAPH_ENGINE.md  SUBSYSTEM_INTERACTION_DIAGRAM.md  SYSTEM_ARCHITECTURE.md  VISUAL_REASONING_SPECIFICATION.md
docs/research/: NOVELTY_BOUNDARIES.md  PATENT_CLAIM_MAPPING.md  PRIOR_ART_ANALYSIS.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/data/: mock-cases.ts
frontend/hooks/: useGraphSync.ts  useReasoningState.ts  useTrajectoryReplay.ts
frontend/lib/: clinical-interpreter.ts  clinical-language.ts  reasoning-utils.ts
frontend/services/: backend-service.ts
frontend/types/: index.ts  (+4 more)
rules/: chronic_dermatitis.yaml  contradiction_matrix.yaml  discriminators.yaml  lichen_planus.yaml  pityriasis_rosea.yaml  pityriasis_rubra_pilaris.yaml  psoriasis.yaml  seborrheic_dermatitis.yaml
tests/: conftest.py  test_backend_refinement.py  test_backend_stabilization.py  test_dataset_validation.py  test_feature_registry.py  test_loader.py  test_performance_calibration.py  test_phase5_step2.py  test_pipeline_integration.py  test_reproducibility.py  test_rule_schema.py
(+174 files in other folders)
