[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "casdre"
version = "0.1.0"
description = "Certainty-Aware Symbolic Dermatological Reasoning Engine — computational differential diagnosis for erythemato-squamous diseases"
authors = [{ name = "Hrytwik", email = "hritwikbali@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "ucimlrepo>=0.0.7",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "jsonschema>=4.20.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
